welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:7: error: not found: value marque
  marque()
  ^PictureMono1:11: error: not found: value marque
  marque()
  ^PictureMono1:15: error: not found: value marque
  marque()
  ^